--- a/themes/zzo/layouts/partials/comments/comments.html
+++ b/themes/zzo/layouts/partials/comments/comments.html
@@ -19,5 +19,7 @@
     {{ partial "comments/isso.html" . }}
   {{ else if $.Param "telegram.enable" }}
     {{ partial "comments/telegram.html" . }}
+  {{ else if $.Param "staticman.enable" }}
+    {{ partial "comments/staticman.html" . }}
   {{ end }}
 {{ end }}
