--- a/themes/zzo/layouts/partials/comments/staticman.html
+++ b/themes/zzo/layouts/partials/comments/staticman.html
@@ -31,7 +31,7 @@
                         <button id="{{ ._id }}" class="btn-info" href="#comment-form" onclick="changeValue('fields[reply_to]', '{{ ._id }}')">Reply to {{ .name     }}</button>
                         </div>
                     </div>
-                {{ partial "comment-replies" (dict "entryId_parent" $postSlug "SiteDataComments_parent" $.Site.Data.comments "parentId" ._id "parentName" .name     "context" .) }}
+                {{ partial "comment-replies.html" (dict "entryId_parent" $postSlug "SiteDataComments_parent" $.Site.Data.comments "parentId" ._id "parentName" .name     "context" .) }}
 
                     {{ end }}
             {{ end }}
