--- a/themes/zzo/layouts/partials/footer/links-social.html
+++ b/themes/zzo/layouts/partials/footer/links-social.html
@@ -3,10 +3,10 @@
   <div class="social">
     {{ range $name, $path := $.Param "socialOptions" }}
       {{ if $path }}
-      <a href="{{ $path | safeURL }}" title="{{ $name }}" aria-label="{{ $name }}">
+      <a href="{{ $path | safeURL }}" rel="me" title="{{ $name }}" aria-label="{{ $name }}">
         {{ partial (print "svgs/social/" $name ".svg") (dict "width" 32 "height" 32) }}
       </a>
-      {{ end }}      
+      {{ end }}
     {{ end }}
     {{ partial "footer/links-feed.html" . }}
   </div>
